fix: mobile page overflow

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
   box-sizing: border-box;
   font-family: sans-serif;
   font-weight: bold;
+  max-width: 100vw;
 }
 
 body {
